--- a/css/root.css
+++ b/css/root.css
@@ -22,9 +22,9 @@
   /*mobile*/
   --h1: clamp(24px, 10vw, 46px);
   --h2: clamp(18px, 6vw, 36px);
-  --h3: clamp(17px, 4vw, 19px);
+  --h3: clamp(17px, 4vw, 26px);
   --h4: clamp(14px, 3vw, 26px);
-  --p: clamp(14px, 2vw, 24px);
+  --p: clamp(14px, 2vw, 17px);
   --button: clamp(14px, 3vw, 16px);
 
   --shadow: rgba(0, 0, 0, 0.1) 2px 4px 11px 0px,
@@ -36,10 +36,12 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-size: var(--p);
 }
 
 html {
   font-size: 100%;
+  scroll-behavior: smooth;
 }
 
 body {
