--- a/css/contact.css
+++ b/css/contact.css
@@ -1,89 +1,21 @@
-#thickLines {
-  position: absolute;
-  top: 0;
-  margin-left: var(--theNumber);
-  margin-right: var(--theNumber);
-  z-index: -1;
-  background-image: url(https://raw.githubusercontent.com/Ivanlsko/BYUstudio/8305ddb8940b606e5baa37d4e0d78ec4abbd188a/css/thick-lines-bg.svg);
-  width: 100vw;
-  height: 50vw;
-  background-size: cover;
-}
-
-#title {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-#decorative {
-  font-family: "autography";
-  font-size: 10vw;
-}
-
-main {
-  margin-top: 20vw;
-  margin-bottom: 40vw;
-}
-
-.contact_form {
-  margin-bottom: 10vw;
-}
-
-.contact_info {
-  margin-bottom: 10vw;
-}
-
-h3 {
-  font-size: var(--h4-m);
-  color: #96d3c1;
-}
-
-p {
-  margin-bottom: -10px;
-}
-
-.contact_info :last-child {
-  margin-bottom: 5vw;
-}
-
-button {
-  /* width: 8.5rem;
-    height: 2.8rem; */
-  padding: 0.8rem 2rem;
-  font-size: var(--button-copy);
-  border: none;
-  background-color: #96d3c1 !important;
-  color: white;
-  font-weight: 400;
-  border-radius: 7px;
-  cursor: pointer;
-}
-
-.two-box-flex {
-  display: flex;
-  gap: 1.5rem;
-}
-
 input {
-  box-sizing: border-box;
-  border-top: none;
-  border-left: none;
-  border-right: none;
+  border: none;
+  border-bottom: 1px solid var(--grey);
   font-family: "Montserrat";
-  height: 1.5rem;
-  margin-bottom: 0.5rem;
+  padding: 0.2rem 0;
+  margin-bottom: 1rem;
   width: 100%;
   outline: none;
 }
 
+label {
+  font-size: 13px;
+}
+
 #message {
-  box-sizing: border-box;
-  border: 2px solid #cccccc !important;
+  border: 2px solid var(--light-grey) !important;
   font-family: "Montserrat";
-  margin-bottom: 3rem;
-  margin-top: 3rem;
+  margin: 0.2rem 0 1rem;
   width: 100%;
   padding: 5px;
   height: 10rem;
@@ -91,48 +23,17 @@ input {
   resize: none;
 }
 
-@media only screen and (min-width: 770px) {
-  .oneStep:first-child {
-    margin-top: 0vw;
-  }
-  #decorative {
-    font-size: 4vw;
-  }
+.section-title.dark-green {
+  margin-bottom: 1rem;
+}
 
-  #title {
-    margin-top: 9vw;
-  }
+button.send-message {
+  background-color: var(--dark-green);
+}
 
-  #thickLines {
-    height: 20vw;
-  }
-
-  p {
-    font-size: var(--body-copy);
-    max-width: 54vw;
-    margin-bottom: -10px;
-  }
-
-  h3 {
-    font-size: var(--h3-d);
-  }
-
-  main {
+@media (min-width: 700px) { 
+  .two-box-flex {
     display: flex;
-    justify-content: space-between;
-    margin-bottom: 10vw;
-    margin-top: 5vw;
+    gap: 1.5rem;
   }
-}
-
-.contact_form button {
-  float: right;
-}
-
-.contact_form {
-  margin-bottom: 0vw;
-}
-
-.contact_info {
-  margin-bottom: 0vw;
 }
