--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,5 @@
 p {
-  font-size: var(--body-copy);
+  font-size: var(--p);
   line-height: var(--line-height);
 }
 
@@ -38,10 +38,14 @@ body {
 }
 
 h1 {
-  font-size: var(--h1-d);
-  position: absolute;
-  width: 50vw;
-  z-index: 1;
+  font-size: var(--h1);
+}
+
+h1>span {
+  font-size: calc(var(--h1)*2);
+  color: var(--yellow);
+  text-shadow: 2px 2px 2px var(--grey);
+  font-family: "Autography";
 }
 
 .heroImg {
@@ -68,7 +72,7 @@ h1 {
   display: grid;
   grid-template-columns: auto auto;
   gap: 4vw;
-  margin-top: 50vw;
+  margin-top: 30vw;
   border-radius: 0.486vw;
 }
 
@@ -80,7 +84,7 @@ h1 {
 }
 
 h3 {
-  font-size: var(--h3-d);
+  font-size: var(--h3);
   margin-bottom: 1vw;
 }
 
@@ -97,7 +101,7 @@ iframe {
 /* Steps */
 
 #steps {
-  height: 40.694vw;
+  height: 60vh;
   background-image: url(https://raw.githubusercontent.com/Ivanlsko/BYUstudio/8305ddb8940b606e5baa37d4e0d78ec4abbd188a/css/thick-lines-bg.svg);
   background-size: cover;
   width: 100vw;
@@ -121,7 +125,9 @@ iframe {
 }
 
 .oneStep > img {
-  width: 20%;
+  width: 6vw;
+  min-width: 40px;
+  max-width: 70px;
 }
 
 .oneStep > p {
@@ -135,8 +141,9 @@ iframe {
 }
 
 h4 {
-  font-size: 1.92vw;
-  line-height: 0;
+  font-size:var(--h4);
+  text-align: center;
+  margin-top: 0.5rem;
 }
 
 /* Kits */
@@ -163,6 +170,15 @@ h4 {
   top: 3vw;
   color: black;
   border-radius: 0.5vw;
+}
+
+#kitsText>h2, #sustainText>h2, #kitsText>p, #sustainText>p, #pinterest>div>h2,  #pinterest>div>p {
+  margin: 0;
+  margin-bottom: 0.5rem;
+}
+
+#kitsText, #sustainText{
+  padding: 2rem;
 }
 
 #kbiggerImg {
@@ -195,7 +211,6 @@ h4 {
   right: 0;
   width: 38vw;
   background-color: #f0f0f0;
-  padding: 0vw 5vw 3vw;
   top: 3vw;
   color: black;
   border-radius: 0.5vw;
@@ -303,11 +318,6 @@ h4 {
     width: 86vw;
   }
 
-  h1 {
-    font-size: var(--h1-d);
-    position: unset;
-  }
-
   #yellowText {
     position: unset;
   }
@@ -347,7 +357,7 @@ h4 {
     width: unset;
   }
 
-  #steps >  h2 {
+  #steps >  h2 {
     margin-top: 2vw;
   }
 
@@ -428,26 +438,26 @@ h4 {
 
   /*general*/
   h1 {
-    font-size: var(--h1-m);
+    font-size: var(--h1);
     width: 86vw;
   }
 
   h2 {
-    font-size: var(--h2-m);
+    font-size: var(--h2);
   }
 
   h3 {
-    font-size: var(--h3-m);
+    font-size: var(--h3);
   }
 
   h4 {
-    font-size: var(--h4-m);
+    font-size: var(--h4);
   }
 
   p,
   li,
   a {
-    font-size: var(--body-copy-m);
+    font-size: var(--p);
     line-height: 2rem;
   }
 
