changed image link

--- a/css/home.css
+++ b/css/home.css
@@ -102,7 +102,7 @@ iframe {
 
 #steps {
   height: 60vh;
-  background-image: url(https://raw.githubusercontent.com/Ivanlsko/BYUstudio/8305ddb8940b606e5baa37d4e0d78ec4abbd188a/css/thick-lines-bg.svg);
+  background-image: url(https://raw.githubusercontent.com/justtyx/BYUstudio.v2/1beb5074613d7edfef405a801ce3a3b7bd1702a2/assets/bursh-waves.svg);
   background-size: cover;
   width: 100vw;
   margin: 10vw -6.944vw 0vw -6.944vw;
