--- a/css/root.css
+++ b/css/root.css
@@ -37,6 +37,7 @@
   padding: 0;
   margin: 0;
   font-size: var(--p);
+  font-family: "Montserrat";
 }
 
 html {
@@ -81,10 +82,11 @@ button {
   font-size: var(--button);
   border: none;
   background-color: var(--beige);
-  color: white;
+  color: black;
   font-weight: 400;
   border-radius: 7px;
   cursor: pointer;
+  font-weight: 700;
 }
 
 .hidden {
